Indexing with slicing

--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -516,8 +516,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e7922685-0344-4259-b1af-32b3ee6e8c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[:, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6056737c-3775-4879-8396-245bab75dd47",
    "metadata": {},
    "outputs": [],
    "source": []
