Indexing with slicing

--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -539,8 +539,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6056737c-3775-4879-8396-245bab75dd47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[1, :2] # select second row and the first two columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "013f444b-310e-49aa-9eaf-ebe11491f1a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[:2, 2] # Third column but only first two rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "047c3041-abe0-4faf-8f01-3b020288f297",
    "metadata": {},
    "outputs": [],
    "source": []
