Indexing with slicing

--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -581,6 +581,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "c71f0294-5ea7-48e9-8164-eb0c4fdd9bd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [4],\n",
+       "       [7]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[:, :1] # selecting the entire axis through the colon"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "047c3041-abe0-4faf-8f01-3b020288f297",
    "metadata": {},
