--- a/PredictMovieRatings.ipynb
+++ b/PredictMovieRatings.ipynb
@@ -164,8 +164,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bdef5e75-0617-46d7-8b26-c3b9637d6292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 15 entries, 88 Minutes to The Terminal\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   15      15 non-null     float64\n",
+      " 1   30      14 non-null     float64\n",
+      " 2   311     13 non-null     float64\n",
+      " 3   452     10 non-null     float64\n",
+      " 4   468     14 non-null     float64\n",
+      " 5   509     15 non-null     float64\n",
+      " 6   547     12 non-null     float64\n",
+      " 7   564     15 non-null     float64\n",
+      " 8   624     13 non-null     float64\n",
+      " 9   73      14 non-null     float64\n",
+      "dtypes: float64(10)\n",
+      "memory usage: 1.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratings_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9afff370-2401-4e50-a612-0047db1d58c3",
    "metadata": {},
    "outputs": [],
    "source": []
