a function that finds a correlation between two users

--- a/PredictMovieRatings.ipynb
+++ b/PredictMovieRatings.ipynb
@@ -163,6 +163,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aba971a4-eaf8-4091-967f-7edea0a526cd",
+   "metadata": {},
+   "source": [
+    "There are some missing values in this data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "bdef5e75-0617-46d7-8b26-c3b9637d6292",
@@ -197,9 +205,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3496f67c-7658-4d64-8a3c-34c15aa6bf54",
+   "metadata": {},
+   "source": [
+    "## Find Similarities Between Users\n",
+    "We'll use the Pearson correlation coefficient to find the correlation between users based on their rated movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5607fa63-ddc3-43e8-8fe5-e14d460b31ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_correlation_between_two_users(ratings_df: pd.DataFrame, user1: str, user2: str):\n",
+    "    \"\"\"Find correlation between two users based on their rated movies using Pearson correlation\"\"\"\n",
+    "    rated_movies_by_both = ratings_df[[user1, user2]].dropna(axis=0).values\n",
+    "    user1_ratings = rated_movies_by_both[:, 0]\n",
+    "    user2_ratings = rated_movies_by_both[:, 1]\n",
+    "    return np.corrcoef(user1_ratings, user2_ratings)[0, 1]\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc8a142-0fdc-4603-9cfd-1b201ba0d491",
+   "metadata": {},
+   "source": [
+    "## Create a matrix that shows the similarities between all pairs of users"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9afff370-2401-4e50-a612-0047db1d58c3",
+   "id": "9e08c284-3acd-4f70-b8a4-c792428bbe88",
    "metadata": {},
    "outputs": [],
    "source": []
