a function that finds a correlation between two users

--- a/PredictMovieRatings.ipynb
+++ b/PredictMovieRatings.ipynb
@@ -239,8 +239,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9e08c284-3acd-4f70-b8a4-c792428bbe88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>15</th>\n",
+       "      <th>30</th>\n",
+       "      <th>311</th>\n",
+       "      <th>452</th>\n",
+       "      <th>468</th>\n",
+       "      <th>509</th>\n",
+       "      <th>547</th>\n",
+       "      <th>564</th>\n",
+       "      <th>624</th>\n",
+       "      <th>73</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.395367</td>\n",
+       "      <td>0.305552</td>\n",
+       "      <td>0.230556</td>\n",
+       "      <td>0.434940</td>\n",
+       "      <td>0.469956</td>\n",
+       "      <td>0.123855</td>\n",
+       "      <td>0.006502</td>\n",
+       "      <td>0.267311</td>\n",
+       "      <td>0.462184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>0.395367</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.186997</td>\n",
+       "      <td>0.140313</td>\n",
+       "      <td>0.102723</td>\n",
+       "      <td>0.535891</td>\n",
+       "      <td>0.330386</td>\n",
+       "      <td>-0.154949</td>\n",
+       "      <td>-0.122837</td>\n",
+       "      <td>0.122264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>0.305552</td>\n",
+       "      <td>-0.186997</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.746033</td>\n",
+       "      <td>0.344309</td>\n",
+       "      <td>0.238744</td>\n",
+       "      <td>-0.013878</td>\n",
+       "      <td>-0.011111</td>\n",
+       "      <td>-0.016278</td>\n",
+       "      <td>0.513114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>452</th>\n",
+       "      <td>0.230556</td>\n",
+       "      <td>0.140313</td>\n",
+       "      <td>0.746033</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.807781</td>\n",
+       "      <td>0.453188</td>\n",
+       "      <td>0.145556</td>\n",
+       "      <td>-0.534522</td>\n",
+       "      <td>0.537484</td>\n",
+       "      <td>0.449013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>0.434940</td>\n",
+       "      <td>0.102723</td>\n",
+       "      <td>0.344309</td>\n",
+       "      <td>0.807781</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.595241</td>\n",
+       "      <td>0.606714</td>\n",
+       "      <td>-0.090911</td>\n",
+       "      <td>0.676868</td>\n",
+       "      <td>0.500932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>0.469956</td>\n",
+       "      <td>0.535891</td>\n",
+       "      <td>0.238744</td>\n",
+       "      <td>0.453188</td>\n",
+       "      <td>0.595241</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.734303</td>\n",
+       "      <td>-0.204034</td>\n",
+       "      <td>0.554024</td>\n",
+       "      <td>0.511659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>0.123855</td>\n",
+       "      <td>0.330386</td>\n",
+       "      <td>-0.013878</td>\n",
+       "      <td>0.145556</td>\n",
+       "      <td>0.606714</td>\n",
+       "      <td>0.734303</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.344611</td>\n",
+       "      <td>0.436309</td>\n",
+       "      <td>-0.072267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>0.006502</td>\n",
+       "      <td>-0.154949</td>\n",
+       "      <td>-0.011111</td>\n",
+       "      <td>-0.534522</td>\n",
+       "      <td>-0.090911</td>\n",
+       "      <td>-0.204034</td>\n",
+       "      <td>0.344611</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.423610</td>\n",
+       "      <td>-0.440686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>624</th>\n",
+       "      <td>0.267311</td>\n",
+       "      <td>-0.122837</td>\n",
+       "      <td>-0.016278</td>\n",
+       "      <td>0.537484</td>\n",
+       "      <td>0.676868</td>\n",
+       "      <td>0.554024</td>\n",
+       "      <td>0.436309</td>\n",
+       "      <td>-0.423610</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.501961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>0.462184</td>\n",
+       "      <td>0.122264</td>\n",
+       "      <td>0.513114</td>\n",
+       "      <td>0.449013</td>\n",
+       "      <td>0.500932</td>\n",
+       "      <td>0.511659</td>\n",
+       "      <td>-0.072267</td>\n",
+       "      <td>-0.440686</td>\n",
+       "      <td>0.501961</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           15        30       311       452       468       509       547  \\\n",
+       "15   1.000000  0.395367  0.305552  0.230556  0.434940  0.469956  0.123855   \n",
+       "30   0.395367  1.000000 -0.186997  0.140313  0.102723  0.535891  0.330386   \n",
+       "311  0.305552 -0.186997  1.000000  0.746033  0.344309  0.238744 -0.013878   \n",
+       "452  0.230556  0.140313  0.746033  1.000000  0.807781  0.453188  0.145556   \n",
+       "468  0.434940  0.102723  0.344309  0.807781  1.000000  0.595241  0.606714   \n",
+       "509  0.469956  0.535891  0.238744  0.453188  0.595241  1.000000  0.734303   \n",
+       "547  0.123855  0.330386 -0.013878  0.145556  0.606714  0.734303  1.000000   \n",
+       "564  0.006502 -0.154949 -0.011111 -0.534522 -0.090911 -0.204034  0.344611   \n",
+       "624  0.267311 -0.122837 -0.016278  0.537484  0.676868  0.554024  0.436309   \n",
+       "73   0.462184  0.122264  0.513114  0.449013  0.500932  0.511659 -0.072267   \n",
+       "\n",
+       "          564       624        73  \n",
+       "15   0.006502  0.267311  0.462184  \n",
+       "30  -0.154949 -0.122837  0.122264  \n",
+       "311 -0.011111 -0.016278  0.513114  \n",
+       "452 -0.534522  0.537484  0.449013  \n",
+       "468 -0.090911  0.676868  0.500932  \n",
+       "509 -0.204034  0.554024  0.511659  \n",
+       "547  0.344611  0.436309 -0.072267  \n",
+       "564  1.000000 -0.423610 -0.440686  \n",
+       "624 -0.423610  1.000000  0.501961  \n",
+       "73  -0.440686  0.501961  1.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users = list(ratings_df.columns)\n",
+    "movies = list(ratings_df.index)\n",
+    "similarity_matrix = np.array([[find_correlation_between_two_users(ratings_df, user1, user2) for user1 in users] for user2 in users])\n",
+    "similarity_df = pd.DataFrame(similarity_matrix, columns=users, index=users)\n",
+    "similarity_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d67c54c-e47e-40f1-94d1-02968cc21cf7",
    "metadata": {},
    "outputs": [],
    "source": []
