we pick k number of users

--- a/PredictMovieRatings.ipynb
+++ b/PredictMovieRatings.ipynb
@@ -281,8 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "64ebe548-6809-4827-b78d-63124194fefd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_neighbors(similarity_df: pd.DataFrame, user: str, rated_users: str, n_neighbors: int):\n",
+    "    return similarity_df[user][rated_users].nlargest(n_neighbors).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b706d71a-5a7f-4f2e-bdda-5c7aa500250e",
    "metadata": {},
    "outputs": [],
    "source": []
