--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "10f221db-49f9-49f2-bbc1-7c87bccc7460",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "e5bffbf7-6df9-4b56-aa09-c92a15d302a7",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "array([7, 8, 9])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "719c406e-4e73-475c-b6b8-a2713f2aec72",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "9"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "75c1b6ea-89aa-435f-adbe-b47413653cc1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d4f6513d-c48f-458c-946e-92d06811ca19",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "        [10, 11, 12]]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "3ec9681f-eb24-47b8-8b37-d129627990c2",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "0414887f-9278-408c-922b-e7f97d31e48f",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "91bb1119-76fe-4e68-9faf-e8209fba1005",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "1f677f93-7d38-4aa4-ab83-2cf5fe97028f",
    "metadata": {},
    "outputs": [
@@ -325,6 +325,41 @@
       "text/plain": [
        "array([[[43, 43, 43],\n",
        "        [43, 43, 43]],\n",
+       "\n",
+       "       [[ 7,  8,  9],\n",
+       "        [10, 11, 12]]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c04640cf-afab-48cb-a9ae-82ff31319bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3d[0] = old_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d0d61e59-af58-4407-b738-44b097dce7dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 4,  5,  6]],\n",
        "\n",
        "       [[ 7,  8,  9],\n",
        "        [10, 11, 12]]])"
@@ -342,41 +377,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c04640cf-afab-48cb-a9ae-82ff31319bf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr3d[0] = old_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "d0d61e59-af58-4407-b738-44b097dce7dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 1,  2,  3],\n",
-       "        [ 4,  5,  6]],\n",
-       "\n",
-       "       [[ 7,  8,  9],\n",
-       "        [10, 11, 12]]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr3d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "id": "8cf57bb9-2d95-4222-82a1-cfbcdb646113",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "       [10, 11, 12]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "01e4901a-e457-4c53-8907-35d6648f83d9",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "           9])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "bc8a4f59-7868-40fd-8995-14469a1b40db",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "array([    1,     2,     3,     4, 12345])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "07f634a3-05a9-41ef-bd93-36bd24e7c317",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "b49f0b38-8fc5-4cea-bf2c-7fadab893fe5",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "64eb7d77-b387-46e9-9dfa-0634d2cde905",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "e7922685-0344-4259-b1af-32b3ee6e8c2b",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "6056737c-3775-4879-8396-245bab75dd47",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "array([4, 5])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "013f444b-310e-49aa-9eaf-ebe11491f1a9",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "array([3, 6])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "c71f0294-5ea7-48e9-8164-eb0c4fdd9bd1",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "       [7]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,8 +604,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "047c3041-abe0-4faf-8f01-3b020288f297",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[1, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2e232e4e-fa84-4a5e-84f7-3838670598ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [4, 5],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[:, :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce73eb9-3f8d-4001-842d-2ca013974f23",
    "metadata": {},
    "outputs": [],
    "source": []
