--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -625,31 +625,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "2e232e4e-fa84-4a5e-84f7-3838670598ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [4, 5],\n",
-       "       [7, 8]])"
+       "array([[1],\n",
+       "       [4],\n",
+       "       [7]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr2d[:, :2]"
+    "arr2d[:, :1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "dce73eb9-3f8d-4001-842d-2ca013974f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2f23377d-5271-48ca-8850-04d238b0a183",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d[1, :3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dce73eb9-3f8d-4001-842d-2ca013974f23",
+   "id": "185507f8-a18f-405b-9754-ea969f6e97a8",
    "metadata": {},
    "outputs": [],
    "source": []
