--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "2e232e4e-fa84-4a5e-84f7-3838670598ef",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "       [7]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "dce73eb9-3f8d-4001-842d-2ca013974f23",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "5"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "2f23377d-5271-48ca-8850-04d238b0a183",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "array([4, 5, 6])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,8 +690,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "185507f8-a18f-405b-9754-ea969f6e97a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2d[:2, 1:] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2615ee71-d093-4a12-92df-8d6c5fdac95f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [4, 0, 0],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0872e4cd-06b2-47f3-9ad1-a87ab7aee1a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5fe9840c-05a6-49ed-88cf-a01d94073ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2d[:2, 1:] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8571bb96-a0f1-486d-ade4-0e112ad6edcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [4, 0, 0],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c3de178-2869-46b0-b3d4-af00ccd9b1df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06528c3d-5ec6-4fa2-b813-b406b380f55e",
    "metadata": {},
    "outputs": [],
    "source": []
