--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -749,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr2d[:2, 1:] = 0"
+    "arr2d[:2, ] = 0"
    ]
   },
   {
@@ -761,8 +761,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0],\n",
-       "       [4, 0, 0],\n",
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0],\n",
        "       [7, 8, 9]])"
       ]
      },
@@ -776,12 +776,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c3de178-2869-46b0-b3d4-af00ccd9b1df",
+   "cell_type": "markdown",
+   "id": "fabdaaf9-e057-4c78-8e91-e97774519e95",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Boolean Indexing"
+   ]
   },
   {
    "cell_type": "code",
