--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -785,8 +785,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "06528c3d-5ec6-4fa2-b813-b406b380f55e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = np.array(['Bob', 'Joe', 'Will', 'Joe', 'Joe'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3dea22c1-e162-4e7d-afdc-6efd978dea59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.randn(7, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9b599ad3-643f-4e10-9747-1b185c92fc6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.77798053e-02, -3.23062839e-01, -5.67488243e-02,\n",
+       "        -2.47060872e+00],\n",
+       "       [ 1.21880110e+00, -8.38535465e-01,  4.89475995e-01,\n",
+       "        -8.21801297e-01],\n",
+       "       [ 1.20316000e+00, -4.36858623e-01,  2.47636414e-01,\n",
+       "        -6.23916709e-05],\n",
+       "       [ 1.99396543e-01, -3.74805984e-01,  3.49915078e-01,\n",
+       "         2.10610136e-01],\n",
+       "       [ 1.60469642e+00,  6.89884230e-01, -9.10584248e-01,\n",
+       "         8.53334790e-01],\n",
+       "       [-9.16687580e-02, -9.11307088e-01, -1.18036843e+00,\n",
+       "        -5.85848479e-01],\n",
+       "       [-2.57769388e-01, -1.54899606e+00, -1.17822563e+00,\n",
+       "        -5.17065471e-01]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92a3e567-e242-4c88-8814-c97696926510",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5393ecc3-810a-479f-a761-5bf72d9fe8ba",
    "metadata": {},
    "outputs": [],
    "source": []
