neighbor rating without bias

--- a/PredictMovieRatings.ipynb
+++ b/PredictMovieRatings.ipynb
@@ -490,12 +490,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eab9f742-3f9a-4c69-8480-d047c6a1ee4d",
+   "metadata": {},
+   "source": [
+    "## Getting Ratings of the similar Users on a Movie\n",
+    "since different users might have different rating scales for the movie that they like, we want to adjust for this bias by substracting a rating of a user for a movie by the mean ratings of that user"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b706d71a-5a7f-4f2e-bdda-5c7aa500250e",
+   "id": "494e1dd7-49c8-4b4f-8d1d-f198f17d0045",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def substract_bias(rating: float, mean_rating: float):\n",
+    "    return rating - mean_rating\n",
+    "\n",
+    "def get_neighbor_rating_without bias_per_movie(ratings_df: pd.DataFrgame, user: str, movie: str):\n",
+    "    \"\"\"Subtract the rating of a user from the mean rating of that user to eliminate bias\"\"\"\n",
+    "    mean_raring = ratings_df[user].mean()\n",
+    "    rating = ratings_df.loc[movie, user]\n",
+    "    return subtract_bias(rating, mean_rating)\n",
+    "\n",
+    "def get_ratings_of_neighbors(ratings_df: pd.DataFrame, neighbors: list, movie: str):\n",
+    "    \"\"\"Get the ratings of all neighbors after adjusting for biases\"\"\"\n",
+    "    return[\n",
+    "    get_neighbor_rating_without bias_per_movie(ratings_df, neighbor, movie)\n",
+    "    for neighbor in neighbors]\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
