--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -790,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = np.array(['Bob', 'Joe', 'Will', 'Joe', 'Joe'])"
+    "names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])"
    ]
   },
   {
@@ -812,20 +812,20 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.77798053e-02, -3.23062839e-01, -5.67488243e-02,\n",
-       "        -2.47060872e+00],\n",
-       "       [ 1.21880110e+00, -8.38535465e-01,  4.89475995e-01,\n",
-       "        -8.21801297e-01],\n",
-       "       [ 1.20316000e+00, -4.36858623e-01,  2.47636414e-01,\n",
-       "        -6.23916709e-05],\n",
-       "       [ 1.99396543e-01, -3.74805984e-01,  3.49915078e-01,\n",
-       "         2.10610136e-01],\n",
-       "       [ 1.60469642e+00,  6.89884230e-01, -9.10584248e-01,\n",
-       "         8.53334790e-01],\n",
-       "       [-9.16687580e-02, -9.11307088e-01, -1.18036843e+00,\n",
-       "        -5.85848479e-01],\n",
-       "       [-2.57769388e-01, -1.54899606e+00, -1.17822563e+00,\n",
-       "        -5.17065471e-01]])"
+       "array([[-8.59218664e-01,  5.89525769e-01,  9.59808084e-01,\n",
+       "        -1.10895435e+00],\n",
+       "       [ 7.25777307e-02,  2.55234299e-01,  2.05042871e-01,\n",
+       "         7.61406358e-01],\n",
+       "       [ 5.22773285e-02,  9.28520212e-01, -1.52567077e-03,\n",
+       "        -4.56344319e-01],\n",
+       "       [-5.47598674e-01,  7.84117123e-01, -5.79560731e-02,\n",
+       "        -3.58133441e-01],\n",
+       "       [ 1.79127075e+00, -5.10107188e-01, -6.37219189e-01,\n",
+       "        -4.29026439e-01],\n",
+       "       [-3.86691735e-01, -1.83077573e+00, -1.27902089e-01,\n",
+       "        -2.93924379e-02],\n",
+       "       [ 2.13697263e-01,  2.84590356e+00, -7.35069726e-01,\n",
+       "         5.58238947e-02]])"
       ]
      },
      "execution_count": 44,
@@ -839,16 +839,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "id": "a7e48ad3-f075-4dff-83fc-947ee407851a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, 4)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "92a3e567-e242-4c88-8814-c97696926510",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5393ecc3-810a-479f-a761-5bf72d9fe8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True, False, False, False])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names == 'Bob'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a598b8b2-3c2e-410b-b7cc-b0442b60624b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.85921866,  0.58952577,  0.95980808, -1.10895435],\n",
+       "       [-0.54759867,  0.78411712, -0.05795607, -0.35813344]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names == 'Bob']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5393ecc3-810a-479f-a761-5bf72d9fe8ba",
+   "id": "24ee32a0-c768-4dc9-b0a0-0e6e4495c6ba",
    "metadata": {},
    "outputs": [],
    "source": []
