--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -812,20 +812,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[-8.59218664e-01,  5.89525769e-01,  9.59808084e-01,\n",
-       "        -1.10895435e+00],\n",
-       "       [ 7.25777307e-02,  2.55234299e-01,  2.05042871e-01,\n",
-       "         7.61406358e-01],\n",
-       "       [ 5.22773285e-02,  9.28520212e-01, -1.52567077e-03,\n",
-       "        -4.56344319e-01],\n",
-       "       [-5.47598674e-01,  7.84117123e-01, -5.79560731e-02,\n",
-       "        -3.58133441e-01],\n",
-       "       [ 1.79127075e+00, -5.10107188e-01, -6.37219189e-01,\n",
-       "        -4.29026439e-01],\n",
-       "       [-3.86691735e-01, -1.83077573e+00, -1.27902089e-01,\n",
-       "        -2.93924379e-02],\n",
-       "       [ 2.13697263e-01,  2.84590356e+00, -7.35069726e-01,\n",
-       "         5.58238947e-02]])"
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [ 0.8510554 ,  0.93875616, -1.49845397,  1.50273531],\n",
+       "       [-1.29881188, -0.07470567, -1.09164549, -0.07532317],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379],\n",
+       "       [ 0.51144801, -0.68313156, -0.82814034, -0.79275602],\n",
+       "       [ 0.03578283, -0.20761868,  0.64270256, -0.05747425],\n",
+       "       [-0.70458243,  1.11353965, -0.89560449, -1.48269102]])"
       ]
      },
      "execution_count": 44,
@@ -860,8 +853,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aae6c2d1-0816-4bfa-828e-c82ea00be73d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
-   "id": "92a3e567-e242-4c88-8814-c97696926510",
+   "id": "ff8a8436-a57f-4570-8be0-8f6d642c50fb",
    "metadata": {},
    "outputs": [
     {
@@ -909,8 +910,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.85921866,  0.58952577,  0.95980808, -1.10895435],\n",
-       "       [-0.54759867,  0.78411712, -0.05795607, -0.35813344]])"
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379]])"
       ]
      },
      "execution_count": 48,
@@ -924,8 +925,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "24ee32a0-c768-4dc9-b0a0-0e6e4495c6ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.61634637, 0.54246886],\n",
+       "       [0.50947263, 0.10404379]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names == 'Bob', 2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "05094b08-730d-4293-815e-bf0938373b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [ 0.8510554 ,  0.93875616, -1.49845397,  1.50273531],\n",
+       "       [-1.29881188, -0.07470567, -1.09164549, -0.07532317],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379],\n",
+       "       [ 0.51144801, -0.68313156, -0.82814034, -0.79275602],\n",
+       "       [ 0.03578283, -0.20761868,  0.64270256, -0.05747425],\n",
+       "       [-0.70458243,  1.11353965, -0.89560449, -1.48269102]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9bde56e2-bbd8-4760-af78-8b282763629a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "047a7d2e-25b0-4ebc-8ece-7e64f0d11f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (names == 'Bob') | (names == 'will')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3bc288b8-2617-41d3-9295-2f7f472e0eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True, False, False, False])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "cf1ce2b1-e529-4a0d-8678-8d6de678922e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "53af5a02-9cef-430b-8553-8a1aa28ff230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [ 0.8510554 ,  0.93875616, -1.49845397,  1.50273531],\n",
+       "       [-1.29881188, -0.07470567, -1.09164549, -0.07532317],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379],\n",
+       "       [ 0.51144801, -0.68313156, -0.82814034, -0.79275602],\n",
+       "       [ 0.03578283, -0.20761868,  0.64270256, -0.05747425],\n",
+       "       [-0.70458243,  1.11353965, -0.89560449, -1.48269102]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1e7ed3ce-1162-458f-b6d6-ea64b510d5b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "data[names == 'Bob']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1b150a74-a714-4944-97df-f307b0bcd38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cond = names == 'Bob'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d03130e6-6a48-4bd2-a3bf-6aa2f81350e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.8510554 ,  0.93875616, -1.49845397,  1.50273531],\n",
+       "       [-1.29881188, -0.07470567, -1.09164549, -0.07532317],\n",
+       "       [ 0.51144801, -0.68313156, -0.82814034, -0.79275602],\n",
+       "       [ 0.03578283, -0.20761868,  0.64270256, -0.05747425],\n",
+       "       [-0.70458243,  1.11353965, -0.89560449, -1.48269102]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[~cond]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "05715039-7e2b-4f9e-af79-f4090f381c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (names == 'Bob') | (names == 'will')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "07ad2f5e-41d5-456a-bbc2-54ba180b9c7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.32570732, -1.6166031 ,  1.61634637,  0.54246886],\n",
+       "       [-1.05878285,  0.33850456,  0.50947263,  0.10404379]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "5010a582-8657-4011-ab4a-3b025443ad69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[data < 0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "eea13ad8-c5e5-4e3b-bb92-940f15a50f52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 1.61634637, 0.54246886],\n",
+       "       [0.8510554 , 0.93875616, 0.        , 1.50273531],\n",
+       "       [0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.33850456, 0.50947263, 0.10404379],\n",
+       "       [0.51144801, 0.        , 0.        , 0.        ],\n",
+       "       [0.03578283, 0.        , 0.64270256, 0.        ],\n",
+       "       [0.        , 1.11353965, 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c3b76963-8c30-427c-b7f0-c120a208cc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[names != 'Joe'] = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a7ff339e-ddd2-42b9-8114-14066bfdde81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.        , 7.        , 7.        , 7.        ],\n",
+       "       [0.8510554 , 0.93875616, 0.        , 1.50273531],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [0.03578283, 0.        , 0.64270256, 0.        ],\n",
+       "       [0.        , 1.11353965, 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4175a2e4-672a-4e30-b02b-765c742eae61",
    "metadata": {},
    "outputs": [],
    "source": []
