--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -1238,9 +1238,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d17d6eb-4c62-4d64-8f46-af8b62c9852a",
+   "metadata": {},
+   "source": [
+    "### FANCY INDEXING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4175a2e4-672a-4e30-b02b-765c742eae61",
+   "id": "97d02c7f-981a-4079-83d1-285af9db246f",
    "metadata": {},
    "outputs": [],
    "source": []
